--- a/chaps.bib
+++ b/chaps.bib
@@ -1,14 +1,7 @@
 @InCollection{1,
-  title = {Forgetting},
-  author = {Jarrod Lewis-Peacock},
-  booktitle = {Encyclopedia of the Human Brain, 2nd edition},
-  year = {2023},
-  publisher = {.},
-}
-@InCollection{2,
-  title = {Prospective memory forgetting},
-  author = {Jarrod Lewis-Peacock},
-  booktitle = {Memory failure},
+  title = {Chapter 15: Neuroimaging},
+  author = {Jessica Church},
+  booktitle = {Literacy Research Methods, 3rd edition},
   year = {2020},
   publisher = {.},
 }
