--- a/pubs.bib
+++ b/pubs.bib
@@ -1,303 +1,51 @@
-@article{1Chiarello_2023,
-	doi = {10.1109/jsen.2022.3227475},
-	url = {https://doi.org/10.1109%2Fjsen.2022.3227475},
-	year = 2023,
-	month = {feb},
-	publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
-	volume = {23},
-	number = {3},
-	pages = {3079--3089},
-	author = {Mark Chiarello and Jeonghwan Lee and Mandy McClintock Salinas and Robin C. Hilsabeck and Jarrod Lewis-Peacock and James Sulzer},
-	title = {The Effect of Biomechanical Features on Classification of Dual-Task Gait},
-	journal = {{IEEE} Sensors Journal}
-}
-@article{2Bruning_2023,
-	doi = {10.3758/s13414-022-02649-2},
-	url = {https://doi.org/10.3758%2Fs13414-022-02649-2},
-	year = 2023,
-	month = {jan},
-	publisher = {Springer Science and Business Media {LLC}},
-	author = {Allison L. Bruning and Meghan M. Mallya and Jarrod A. Lewis-Peacock},
-	title = {Rumination burdens the updating of working memory},
-	journal = {Attention, Perception, {\&} Psychophysics}
-}
-@article{3Zhang_2022,
-	doi = {10.1037/xge0001309},
-	url = {https://doi.org/10.1037%2Fxge0001309},
+@article{1Tillman_2022,
+	doi = {10.1111/cdev.13780},
+	url = {https://doi.org/10.1111%2Fcdev.13780},
 	year = 2022,
-	month = {nov},
-	publisher = {American Psychological Association ({APA})},
-	author = {Ziyao Zhang and Jarrod A. Lewis-Peacock},
-	title = {Prioritization sharpens working memories but does not protect them from distraction.},
-	journal = {Journal of Experimental Psychology: General}
+	month = {may},
+	publisher = {Wiley},
+	volume = {93},
+	number = {5},
+	pages = {1380--1397},
+	author = {Katharine A. Tillman and Eren Fukuda and David Barner},
+	title = {Children gradually construct spatial representations of temporal events},
+	journal = {Child Development}
 }
-@inproceedings{Bretton_Granatoor_2022,
-	doi = {10.1109/biocas54905.2022.9948604},
-	url = {https://doi.org/10.1109%2Fbiocas54905.2022.9948604},
-	year = 2022,
-	month = {oct},
-	publisher = {{IEEE}},
-	author = {Zachary Bretton-Granatoor and Hannah Stealey and Samantha R. Santacruz and Jarrod A. Lewis-Peacock},
-	title = {Estimating Intrinsic Manifold Dimensionality to Classify Task-Related Information in Human and Non-Human Primate Data},
-	booktitle = {2022 {IEEE} Biomedical Circuits and Systems Conference ({BioCAS})},
-	journal = {IEEE Biomedical Circuits and Systems Conference : healthcare technology : [proceedings]. IEEE Biomedical Circuits and Systems Conference}
-}
-@article{5Hennings_2022,
-	doi = {10.1016/j.neubiorev.2022.104918},
-	url = {https://doi.org/10.1016%2Fj.neubiorev.2022.104918},
-	year = 2022,
-	month = {nov},
-	publisher = {Elsevier {BV}},
-	volume = {142},
-	pages = {104918},
-	author = {Augustin C. Hennings and Samuel E. Cooper and Jarrod A. Lewis-Peacock and Joseph E. Dunsmoor},
-	title = {Pattern analysis of neuroimaging data reveals novel insights on threat learning and extinction in humans},
-	journal = {Neuroscience {\&} Biobehavioral Reviews}
-}
-@article{6Keller_2022,
-	doi = {10.1523/jneurosci.0075-22.2022},
-	url = {https://doi.org/10.1523%2Fjneurosci.0075-22.2022},
-	year = 2022,
-	month = {jun},
-	publisher = {Society for Neuroscience},
-	volume = {42},
-	number = {29},
-	pages = {5717--5729},
-	author = {Nicole E. Keller and Augustin C. Hennings and Emily K. Leiker and Jarrod A. Lewis-Peacock and Joseph E. Dunsmoor},
-	title = {Rewarded Extinction Increases Amygdalar Connectivity and Stabilizes Long-Term Memory Traces in the {vmPFC}},
-	journal = {The Journal of Neuroscience}
-}
-@article{7Koslov_2022,
-	doi = {10.3758/s13421-022-01275-5},
-	url = {https://doi.org/10.3758%2Fs13421-022-01275-5},
-	year = 2022,
-	month = {apr},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {50},
-	number = {8},
-	pages = {1772--1788},
-	author = {Seth R. Koslov and Landry S. Bulls and Jarrod A. Lewis-Peacock},
-	title = {Distinct monitoring strategies underlie costs and performance in prospective memory},
-	journal = {Memory {\&} Cognition}
-}
-@article{8Mallett_2022,
-	doi = {10.1162/jocn_a_01831},
-	url = {https://doi.org/10.1162%2Fjocn_a_01831},
+@article{2Tillman_2022,
+	doi = {10.1111/cdev.13763},
+	url = {https://doi.org/10.1111%2Fcdev.13763},
 	year = 2022,
 	month = {mar},
-	publisher = {{MIT} Press - Journals},
-	volume = {34},
+	publisher = {Wiley},
+	volume = {93},
 	number = {5},
-	pages = {776--786},
-	author = {Remington Mallett and Elizabeth S. Lorenc and Jarrod A. Lewis-Peacock},
-	title = {Working Memory Swap Errors Have Identifiable Neural Representations},
-	journal = {Journal of Cognitive Neuroscience}
+	pages = {1270--1283},
+	author = {Katharine A. Tillman and Caren M. Walker},
+	title = {You can't change the past: Children's recognition of the causal asymmetry between past and future events},
+	journal = {Child Development}
 }
-@article{9Hennings_2022,
-	doi = {10.1016/j.cub.2021.11.004},
-	url = {https://doi.org/10.1016%2Fj.cub.2021.11.004},
-	year = 2021,
-	month = {jan},
-	publisher = {Elsevier {BV}},
-	volume = {32},
-	number = {2},
-	pages = {304--314.e5},
-	author = {Augustin C. Hennings and Mason McClay and Michael R. Drew and Jarrod A. Lewis-Peacock and Joseph E. Dunsmoor},
-	title = {Neural reinstatement reveals divided organization of fear and extinction memories in the human brain},
-	journal = {Current Biology}
-}
-@article{10Lu_2021,
-	doi = {10.1088/1741-2552/ac160f},
-	url = {https://doi.org/10.1088%2F1741-2552%2Fac160f},
-	year = 2021,
-	month = {aug},
-	publisher = {{IOP} Publishing},
-	volume = {18},
-	number = {4},
-	pages = {045013},
-	author = {Hung-Yun Lu and Elizabeth S Lorenc and Hanlin Zhu and Justin Kilmarx and James Sulzer and Chong Xie and Philippe N Tobler and Andrew J Watrous and Amy L Orsborn and Jarrod Lewis-Peacock and Samantha R Santacruz},
-	title = {Multi-scale neural decoding and analysis},
-	journal = {Journal of Neural Engineering}
-}
-@article{11Hennings_2021,
-	doi = {10.1101/lm.053371.120},
-	url = {https://doi.org/10.1101%2Flm.053371.120},
-	year = 2021,
-	month = {may},
-	publisher = {Cold Spring Harbor Laboratory},
-	volume = {28},
-	number = {6},
-	pages = {178--186},
-	author = {Augustin C. Hennings and Jarrod A. Lewis-Peacock and Joseph E. Dunsmoor},
-	title = {Emotional learning retroactively enhances item memory but distorts source attribution},
-	journal = {Learning {\&} Memory}
-}
-@article{12Oblak_2021,
-	doi = {10.1152/jn.00509.2020},
-	url = {https://doi.org/10.1152%2Fjn.00509.2020},
-	year = 2021,
-	month = {may},
-	publisher = {American Physiological Society},
-	volume = {125},
-	number = {5},
-	pages = {1720--1734},
-	author = {Ethan Oblak and Jarrod Lewis-Peacock and James Sulzer},
-	title = {Differential neural plasticity of individual fingers revealed by {fMRI} neurofeedback},
-	journal = {Journal of Neurophysiology}
-}
-@article{13Chiu_2021,
-	doi = {10.1016/j.neuroimage.2021.117983},
-	url = {https://doi.org/10.1016%2Fj.neuroimage.2021.117983},
-	year = 2021,
-	month = {jul},
-	publisher = {Elsevier {BV}},
-	volume = {235},
-	pages = {117983},
-	author = {Yi-Chieh Chiu and Tracy H. Wang and Diane M. Beck and Jarrod A. Lewis-Peacock and Lili Sahakyan},
-	title = {Separation of item and context in item-method directed forgetting},
-	journal = {{NeuroImage}}
-}
-@article{14Lorenc_2021,
-	doi = {10.1016/j.tics.2020.12.004},
-	url = {https://doi.org/10.1016%2Fj.tics.2020.12.004},
-	year = 2021,
-	month = {mar},
-	publisher = {Elsevier {BV}},
-	volume = {25},
-	number = {3},
-	pages = {228--239},
-	author = {Elizabeth S. Lorenc and Remington Mallett and Jarrod A. Lewis-Peacock},
-	title = {Distraction in Visual Working Memory: Resistance is Not Futile},
-	journal = {Trends in Cognitive Sciences}
-}
-@article{15Kilmarx_2021,
-	doi = {10.1038/s41598-020-80166-8},
-	url = {https://doi.org/10.1038%2Fs41598-020-80166-8},
-	year = 2021,
-	month = {jan},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {11},
-	number = {1},
-	author = {Justin Kilmarx and Ethan Oblak and James Sulzer and Jarrod Lewis-Peacock},
-	title = {Towards a common template for neural reinforcement of finger individuation},
-	journal = {Scientific Reports}
-}
-@article{16Kim_2020,
-	doi = {10.1038/s41467-020-20085-4},
-	url = {https://doi.org/10.1038%2Fs41467-020-20085-4},
+@article{3Starr_2020,
+	doi = {10.1111/cdev.13477},
+	url = {https://doi.org/10.1111%2Fcdev.13477},
 	year = 2020,
 	month = {dec},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {11},
-	number = {1},
-	author = {Hyojeong Kim and Harry R. Smolker and Louisa L. Smith and Marie T. Banich and Jarrod A. Lewis-Peacock},
-	title = {Changes to information in working memory depend on distinct removal operations},
-	journal = {Nature Communications}
+	publisher = {Wiley},
+	volume = {92},
+	number = {3},
+	author = {Ariel Starr and Alagia J. Cirolia and Katharine A. Tillman and Mahesh Srinivasan},
+	title = {Spatial Metaphor Facilitates Word Learning},
+	journal = {Child Development}
 }
-@article{17Bruning_2020,
-	doi = {10.1038/s41598-020-79108-1},
-	url = {https://doi.org/10.1038%2Fs41598-020-79108-1},
+@article{4Tillman_2020,
+	doi = {10.1080/0740770x.2020.1869422},
+	url = {https://doi.org/10.1080%2F0740770x.2020.1869422},
 	year = 2020,
-	month = {dec},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {10},
-	number = {1},
-	author = {Allison L. Bruning and Jarrod A. Lewis-Peacock},
-	title = {Long-term memory guides resource allocation in working memory},
-	journal = {Scientific Reports}
-}
-@article{18Momennejad_2021,
-	doi = {10.1016/j.neuropsychologia.2020.107657},
-	url = {https://doi.org/10.1016%2Fj.neuropsychologia.2020.107657},
-	year = 2020,
-	month = {jul},
-	publisher = {Elsevier {BV}},
-	volume = {158},
-	pages = {107657},
-	author = {Ida Momennejad and Jarrod Lewis-Peacock and Kenneth A. Norman and Jonathan D. Cohen and Satinder Singh and Richard L. Lewis},
-	title = {Rational use of episodic and working memory: A normative account of prospective memory},
-	journal = {Neuropsychologia}
-}
-@article{19Weng_2020,
-	doi = {10.3389/fpsyg.2020.573134},
-	url = {https://doi.org/10.3389%2Ffpsyg.2020.573134},
-	year = 2020,
-	month = {nov},
-	publisher = {Frontiers Media {SA}},
-	volume = {11},
-	author = {Helen Y. Weng and Mushim P. Ikeda and Jarrod A. Lewis-Peacock and Maria T. Chao and Duana Fullwiley and Vierka Goldman and Sasha Skinner and Larissa G. Duncan and Adam Gazzaley and Frederick M. Hecht},
-	title = {Toward a Compassionate Intersectional Neuroscience: Increasing Diversity and Equity in Contemplative Neuroscience},
-	journal = {Frontiers in Psychology}
-}
-@article{20Hennings_2021,
-	doi = {10.1016/j.bbr.2020.112931},
-	url = {https://doi.org/10.1016%2Fj.bbr.2020.112931},
-	year = 2020,
-	month = {feb},
-	publisher = {Elsevier {BV}},
-	volume = {398},
-	pages = {112931},
-	author = {Augustin C. Hennings and Sophia A. Bibb and Jarrod A. Lewis-Peacock and Joseph E. Dunsmoor},
-	title = {Thought suppression inhibits the generalization of fear extinction},
-	journal = {Behavioural Brain Research}
-}
-@article{21Weng_2020,
-	doi = {10.3389/fnhum.2020.00336},
-	url = {https://doi.org/10.3389%2Ffnhum.2020.00336},
-	year = 2020,
-	month = {aug},
-	publisher = {Frontiers Media {SA}},
-	volume = {14},
-	author = {Helen Y. Weng and Jarrod A. Lewis-Peacock and Frederick M. Hecht and Melina R. Uncapher and David A. Ziegler and Norman A. S. Farb and Veronica Goldman and Sasha Skinner and Larissa G. Duncan and Maria T. Chao and Adam Gazzaley},
-	title = {Focus on the Breath: Brain Decoding Reveals Internal States of Attention During Meditation},
-	journal = {Frontiers in Human Neuroscience}
-}
-@article{22Hennings_2020,
-	doi = {10.1016/j.neuropsychologia.2020.107573},
-	url = {https://doi.org/10.1016%2Fj.neuropsychologia.2020.107573},
-	year = 2020,
-	month = {oct},
-	publisher = {Elsevier {BV}},
-	volume = {147},
-	pages = {107573},
-	author = {Augustin C. Hennings and Mason McClay and Jarrod A. Lewis-Peacock and Joseph E. Dunsmoor},
-	title = {Contextual reinstatement promotes extinction generalization in healthy adults but not {PTSD}},
-	journal = {Neuropsychologia}
-}
-@article{23Ros_2020,
-	doi = {10.1093/brain/awaa009},
-	url = {https://doi.org/10.1093%2Fbrain%2Fawaa009},
-	year = 2020,
-	month = {mar},
-	publisher = {Oxford University Press ({OUP})},
-	volume = {143},
-	number = {6},
-	pages = {1674--1685},
-	author = {Tomas Ros and Stefanie Enriquez-Geppert and Vadim Zotev and Kymberly D Young and Guilherme Wood and Susan Whitfield-Gabrieli and Feng Wan and Patrik Vuilleumier and Fran{\c{c}}ois Vialatte and Dimitri Van De Ville and Doron Todder and Tanju Surmeli and James S Sulzer and Ute Strehl and Maurice Barry Sterman and Naomi J Steiner and Bettina Sorger and Surjo R Soekadar and Ranganatha Sitaram and Leslie H Sherlin and Michael Schönenberg and Frank Scharnowski and Manuel Schabus and Katya Rubia and Agostinho Rosa and Miriam Reiner and Jaime A Pineda and Christian Paret and Alexei Ossadtchi and Andrew A Nicholson and Wenya Nan and Javier Minguez and Jean-Arthur Micoulaud-Franchi and David M A Mehler and Michael Lührs and Joel Lubar and Fabien Lotte and David E J Linden and Jarrod A Lewis-Peacock and Mikhail A Lebedev and Ruth A Lanius and Andrea Kübler and Cornelia Kranczioch and Yury Koush and Lilian Konicar and Simon H Kohl and Silivia E Kober and Manousos A Klados and Camille Jeunet and T W P Janssen and Rene J Huster and Kerstin Hoedlmoser and Laurence M Hirshberg and Stephan Heunis and Talma Hendler and Michelle Hampson and Adrian G Guggisberg and Robert Guggenberger and John H Gruzelier and Rainer W Göbel and Nicolas Gninenko and Alireza Gharabaghi and Paul Frewen and Thomas Fovet and Thal{\'{\i}}a Fern{\'{a}}ndez and Carlos Escolano and Ann-Christine Ehlis and Renate Drechsler and R Christopher deCharms and Stefan Debener and Dirk De Ridder and Eddy J Davelaar and Marco Congedo and Marc Cavazza and Marinus H M Breteler and Daniel Brandeis and Jerzy Bodurka and Niels Birbaumer and Olga M Bazanova and Beatrix Barth and Panagiotis D Bamidis and Tibor Auer and Martijn Arns and Robert T Thibault},
-	title = {Consensus on the reporting and experimental design of clinical and cognitive-behavioural neurofeedback studies ({CRED}-nf checklist)},
-	journal = {Brain}
-}
-@article{24Mallett_2020,
-	doi = {10.3758/s13423-019-01707-5},
-	url = {https://doi.org/10.3758%2Fs13423-019-01707-5},
-	year = 2020,
-	month = {jan},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {27},
+	month = {may},
+	publisher = {Informa {UK} Limited},
+	volume = {30},
 	number = {2},
-	pages = {350--356},
-	author = {Remington Mallett and Anurima Mummaneni and Jarrod A. Lewis-Peacock},
-	title = {Distraction biases working memory for faces},
-	journal = {Psychonomic Bulletin {\&} Review}
-}
-@article{25Weng_2021,
-	doi = {10.3389/fpsyg.2020.631816},
-	url = {https://doi.org/10.3389%2Ffpsyg.2020.631816},
-	year = 2020,
-	month = {jan},
-	publisher = {Frontiers Media {SA}},
-	volume = {11},
-	author = {Helen Y. Weng and Mushim P. Ikeda and Jarrod A. Lewis-Peacock and Maria T. Chao and Duana Fullwiley and Vierka Goldman and Sasha Skinner and Larissa G. Duncan and Adam Gazzaley and Frederick M. Hecht},
-	title = {Corrigendum: Toward a Compassionate Intersectional Neuroscience: Increasing Diversity and Equity in Contemplative Neuroscience},
-	journal = {Frontiers in Psychology}
+	pages = {231--236},
+	author = {Katharine A. Tillman},
+	title = {Pathological fracture: 50 lessons from the Medical/Surgical floor},
+	journal = {Women {\&} Performance: a journal of feminist theory}
 }
