--- a/preprints.bib
+++ b/preprints.bib
@@ -1,18 +1,18 @@
-@article{1DeRosa_2023,
-	doi = {10.1101/2023.02.14.519204},
-	url = {https://doi.org/10.1101%2F2023.02.14.519204},
-	year = 2023,
-	month = {feb},
-	publisher = {Cold Spring Harbor Laboratory},
-	author = {Jacob DeRosa and Hyojeong Kim and Jarrod Lewis-Peacock and Marie T. Banich},
-	title = {Neural Systems Underlying the Implementation of Working Memory Removal Operations}
+@article{1Williams_2022,
+	doi = {10.31234/osf.io/4fgva},
+	url = {https://doi.org/10.31234%2Fosf.io%2F4fgva},
+	year = 2022,
+	month = {jul},
+	publisher = {Center for Open Science},
+	author = {Katherine Williams and A Alban Foulser and Katharine A Tillman},
+	title = {Effects of Language on Social Essentialist Beliefs and Stigma about Mental Illness}
 }
-@article{2Keller_2021,
-	doi = {10.1101/2021.12.08.471649},
-	url = {https://doi.org/10.1101%2F2021.12.08.471649},
-	year = 2021,
-	month = {dec},
-	publisher = {Cold Spring Harbor Laboratory},
-	author = {Nicole E. Keller and Augustin C. Hennings and Emily K. Leiker and Jarrod A. Lewis-Peacock and Joseph E. Dunsmoor},
-	title = {Rewarded extinction increases amygdalar connectivity and stabilizes long-term memory traces in the {vmPFC}}
+@article{2Sullivan_2022,
+	doi = {10.31234/osf.io/dj37h},
+	url = {https://doi.org/10.31234%2Fosf.io%2Fdj37h},
+	year = 2022,
+	month = {jun},
+	publisher = {Center for Open Science},
+	author = {Jess Sullivan and Katharine A Tillman and Andrew Shtulman},
+	title = {Stay away, Santa: Children's beliefs about the impact of {COVID}-19 on real and fictional beings}
 }
