--- a/books.bib
+++ b/books.bib
@@ -1,6 +1,6 @@
 @Book{1,
-  title = {Visual Memory},
-  author = {Jarrod Lewis-Peacock},
-  publisher = {Routledge},
-  year = {2022},
+  title = {Introduction to Statistics for the Behavioral Sciences using R},
+  author = {James Curley},
+  publisher = {https://jalapic.github.io/introstats/},
+  year = {2020},
 }
