--- a/chaps.bib
+++ b/chaps.bib
@@ -1,7 +1,10 @@
-@InCollection{1,
-  title = {Chapter 15: Neuroimaging},
-  author = {Jessica Church},
-  booktitle = {Literacy Research Methods, 3rd edition},
-  year = {2020},
-  publisher = {.},
+@incollection{Curley_2023,
+	doi = {10.1016/b978-0-323-91909-8.00023-2},
+	url = {https://doi.org/10.1016%2Fb978-0-323-91909-8.00023-2},
+	year = 2023,
+	publisher = {Elsevier},
+	pages = {465--478},
+	author = {James P. Curley and Rahia Mashoodh and Frances A. Champagne},
+	title = {Transgenerational Epigenetics},
+	booktitle = {Handbook of Epigenetics}
 }
