--- a/preprints.bib
+++ b/preprints.bib
@@ -1,18 +1,18 @@
-@article{1Williams_2022,
-	doi = {10.31234/osf.io/4fgva},
-	url = {https://doi.org/10.31234%2Fosf.io%2F4fgva},
-	year = 2022,
-	month = {jul},
-	publisher = {Center for Open Science},
-	author = {Katherine Williams and A Alban Foulser and Katharine A Tillman},
-	title = {Effects of Language on Social Essentialist Beliefs and Stigma about Mental Illness}
+@article{1Lee_2021,
+	doi = {10.1101/2021.09.04.458987},
+	url = {https://doi.org/10.1101%2F2021.09.04.458987},
+	year = 2021,
+	month = {sep},
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {Won Lee and Tyler M. Milewski and Madeleine F. Dwortz and Rebecca L. Young and Andrew D. Gaudet and Laura K. Fonken and Frances A. Champagne and James P. Curley},
+	title = {Distinct inflammatory and transcriptomic profiles in dominant versus subordinate males in mouse social hierarchies}
 }
-@article{2Sullivan_2022,
-	doi = {10.31234/osf.io/dj37h},
-	url = {https://doi.org/10.31234%2Fosf.io%2Fdj37h},
-	year = 2022,
-	month = {jun},
-	publisher = {Center for Open Science},
-	author = {Jess Sullivan and Katharine A Tillman and Andrew Shtulman},
-	title = {Stay away, Santa: Children's beliefs about the impact of {COVID}-19 on real and fictional beings}
+@article{2Padilla_Coreano_2020,
+	doi = {10.21203/rs.3.rs-94115/v1},
+	url = {https://doi.org/10.21203%2Frs.3.rs-94115%2Fv1},
+	year = 2020,
+	month = {nov},
+	publisher = {Research Square Platform {LLC}},
+	author = {Nancy Padilla-Coreano and Kanha Batra and Makenzie Patarino and Zexin Chen and Rachel Rock and Ruihan Zhang and Sebastien Hausmann and Javier Weddington and Reesha Patel and Yu Zhang and Hao-Shu Fang and Laurel Keyes and Avraham Libster and Gillian Matthews and James Curley and Ila Fiete and Cewu Lu and Kay Tye},
+	title = {A cortical-hypothalamic circuit decodes social rank and promotes dominance behavior}
 }
