--- a/chaps.bib
+++ b/chaps.bib
@@ -1,10 +1,7 @@
-@incollection{Curley_2023,
-	doi = {10.1016/b978-0-323-91909-8.00023-2},
-	url = {https://doi.org/10.1016%2Fb978-0-323-91909-8.00023-2},
-	year = 2023,
-	publisher = {Elsevier},
-	pages = {465--478},
-	author = {James P. Curley and Rahia Mashoodh and Frances A. Champagne},
-	title = {Transgenerational Epigenetics},
-	booktitle = {Handbook of Epigenetics}
+@InCollection{1,
+  title = {Visual Guidance of Natural Behavior},
+  author = {Mary Hayhoe},
+  booktitle = {Oxford Research Encyclopedia of Psychology},
+  year = {2022},
+  publisher = {.},
 }
