--- a/preprints.bib
+++ b/preprints.bib
@@ -1,18 +1,27 @@
-@article{1Lee_2021,
-	doi = {10.1101/2021.09.04.458987},
-	url = {https://doi.org/10.1101%2F2021.09.04.458987},
-	year = 2021,
+@article{1Muller_2022,
+	doi = {10.1101/2022.09.06.506797},
+	url = {https://doi.org/10.1101%2F2022.09.06.506797},
+	year = 2022,
 	month = {sep},
 	publisher = {Cold Spring Harbor Laboratory},
-	author = {Won Lee and Tyler M. Milewski and Madeleine F. Dwortz and Rebecca L. Young and Andrew D. Gaudet and Laura K. Fonken and Frances A. Champagne and James P. Curley},
-	title = {Distinct inflammatory and transcriptomic profiles in dominant versus subordinate males in mouse social hierarchies}
+	author = {Karl Muller and Jonathan S. Matthis and Kathryn Bonnen and Lawrence K. Cormack and Alexander C. Huk and Mary Hayhoe},
+	title = {Behavior shapes retinal motion statistics during natural locomotion}
 }
-@article{2Padilla_Coreano_2020,
-	doi = {10.21203/rs.3.rs-94115/v1},
-	url = {https://doi.org/10.21203%2Frs.3.rs-94115%2Fv1},
+@article{2Liu_2020,
+	doi = {10.1101/2020.12.29.424756},
+	url = {https://doi.org/10.1101%2F2020.12.29.424756},
 	year = 2020,
-	month = {nov},
-	publisher = {Research Square Platform {LLC}},
-	author = {Nancy Padilla-Coreano and Kanha Batra and Makenzie Patarino and Zexin Chen and Rachel Rock and Ruihan Zhang and Sebastien Hausmann and Javier Weddington and Reesha Patel and Yu Zhang and Hao-Shu Fang and Laurel Keyes and Avraham Libster and Gillian Matthews and James Curley and Ila Fiete and Cewu Lu and Kay Tye},
-	title = {A cortical-hypothalamic circuit decodes social rank and promotes dominance behavior}
+	month = {dec},
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {Lijia Liu and Dana Ballard and Mary Hayhoe},
+	title = {Humans use minimum cost movements in a whole-body task}
+}
+@article{3Matthis_2020,
+	doi = {10.1101/2020.07.23.217893},
+	url = {https://doi.org/10.1101%2F2020.07.23.217893},
+	year = 2020,
+	month = {jul},
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {Jonathan Samir Matthis and Karl S Muller and Kathryn Bonnen and Mary M Hayhoe},
+	title = {Retinal optic flow during natural locomotion}
 }
