--- a/pubs.bib
+++ b/pubs.bib
@@ -1,166 +1,127 @@
-@article{1Ward_2022,
-	doi = {10.1111/rssc.12581},
-	url = {https://doi.org/10.1111%2Frssc.12581},
+@article{1Ashmaig_2022,
+	doi = {10.1167/jov.22.14.4416},
+	url = {https://doi.org/10.1167%2Fjov.22.14.4416},
 	year = 2022,
-	month = {jul},
-	publisher = {Oxford University Press ({OUP})},
-	volume = {71},
+	month = {dec},
+	publisher = {Association for Research in Vision and Ophthalmology ({ARVO})},
+	volume = {22},
+	number = {14},
+	pages = {4416},
+	author = {Omer Ashmaig and Karl Muller and Mary Hayhoe},
+	title = {Does working memory decay constrain gaze location while walking and bicycling?},
+	journal = {Journal of Vision}
+}
+@article{2Panfili_2022,
+	doi = {10.1167/jov.22.14.4040},
+	url = {https://doi.org/10.1167%2Fjov.22.14.4040},
+	year = 2022,
+	month = {dec},
+	publisher = {Association for Research in Vision and Ophthalmology ({ARVO})},
+	volume = {22},
+	number = {14},
+	pages = {4040},
+	author = {Daniel Panfili and Karl Muller and Mary Hayhoe},
+	title = {Flow segmentation during locomotion},
+	journal = {Journal of Vision}
+}
+@article{3Rubin_2022,
+	doi = {10.1080/16506073.2022.2053882},
+	url = {https://doi.org/10.1080%2F16506073.2022.2053882},
+	year = 2022,
+	month = {apr},
+	publisher = {Informa {UK} Limited},
+	volume = {51},
 	number = {5},
-	pages = {1402--1426},
-	author = {Owen G. Ward and Jing Wu and Tian Zheng and Anna L. Smith and James P. Curley},
-	title = {Network Hawkes process models for exploring latent hierarchy in social animal interactions},
-	journal = {Journal of the Royal Statistical Society: Series C (Applied Statistics)}
+	pages = {371--387},
+	author = {Mikael Rubin and Karl Muller and Mary M. Hayhoe and Michael J. Telch},
+	title = {Attention guidance augmentation of virtual reality exposure therapy for social anxiety disorder: a pilot randomized controlled trial},
+	journal = {Cognitive Behaviour Therapy}
 }
-@article{2Turetsky_2022,
-	doi = {10.1111/josi.12536},
-	url = {https://doi.org/10.1111%2Fjosi.12536},
+@article{4Matthis_2022,
+	doi = {10.1371/journal.pcbi.1009575},
+	url = {https://doi.org/10.1371%2Fjournal.pcbi.1009575},
 	year = 2022,
-	month = {jul},
-	publisher = {Wiley},
-	author = {Kate M. Turetsky and James P. Curley and Ashli B. Carter and Valerie Purdie-Greenaway},
-	title = {Explaining the gender gap in negotiation performance: Social network ties outweigh internal barriers},
-	journal = {Journal of Social Issues}
-}
-@article{3Wu_2022,
-	doi = {10.1214/21-aoas1539},
-	url = {https://doi.org/10.1214%2F21-aoas1539},
-	year = 2022,
-	month = {jun},
-	publisher = {Institute of Mathematical Statistics},
-	volume = {16},
-	number = {2},
-	author = {Jing Wu and Owen G. Ward and James Curley and Tian Zheng},
-	title = {Markov-modulated Hawkes processes for modeling sporadic and bursty event occurrences in social interactions},
-	journal = {The Annals of Applied Statistics}
-}
-@article{4Lee_2022,
-	doi = {10.1016/j.yhbeh.2022.105176},
-	url = {https://doi.org/10.1016%2Fj.yhbeh.2022.105176},
-	year = 2022,
-	month = {jun},
-	publisher = {Elsevier {BV}},
-	volume = {142},
-	pages = {105176},
-	author = {W. Lee and M.F. Dwortz and T.M. Milewski and F.A. Champagne and J.P. Curley},
-	title = {Social status mediated variation in hypothalamic transcriptional profiles of male mice},
-	journal = {Hormones and Behavior}
-}
-@article{5Padilla_Coreano_2022,
-	doi = {10.1038/s41586-022-04507-5},
-	url = {https://doi.org/10.1038%2Fs41586-022-04507-5},
-	year = 2022,
-	month = {mar},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {603},
-	number = {7902},
-	pages = {667--671},
-	author = {Nancy Padilla-Coreano and Kanha Batra and Makenzie Patarino and Zexin Chen and Rachel R. Rock and Ruihan Zhang and S{\'{e}}bastien B. Hausmann and Javier C. Weddington and Reesha Patel and Yu E. Zhang and Hao-Shu Fang and Srishti Mishra and Deryn O. LeDuke and Jasmin Revanna and Hao Li and Matilde Borio and Rachelle Pamintuan and Aneesh Bal and Laurel R. Keyes and Avraham Libster and Romy Wichmann and Fergil Mills and Felix H. Taschbach and Gillian A. Matthews and James P. Curley and Ila R. Fiete and Cewu Lu and Kay M. Tye},
-	title = {Cortical ensembles orchestrate social competition through hypothalamic outputs},
-	journal = {Nature}
-}
-@article{6Milewski_2022,
-	doi = {10.1098/rstb.2020.0443},
-	url = {https://doi.org/10.1098%2Frstb.2020.0443},
-	year = 2022,
-	month = {jan},
-	publisher = {The Royal Society},
-	volume = {377},
-	number = {1845},
-	author = {T. M. Milewski and W. Lee and F. A. Champagne and J. P. Curley},
-	title = {Behavioural and physiological plasticity in social hierarchies},
-	journal = {Philosophical Transactions of the Royal Society B: Biological Sciences}
-}
-@article{7Strauss_2022,
-	doi = {10.1098/rstb.2020.0436},
-	url = {https://doi.org/10.1098%2Frstb.2020.0436},
-	year = 2022,
-	month = {jan},
-	publisher = {The Royal Society},
-	volume = {377},
-	number = {1845},
-	author = {Eli D. Strauss and Alex R. DeCasien and Gabriela Galindo and Elizabeth A. Hobson and Daizaburo Shizuka and James P. Curley},
-	title = {{DomArchive}: a century of published dominance data},
-	journal = {Philosophical Transactions of the Royal Society B: Biological Sciences}
-}
-@article{8Dwortz_2022,
-	doi = {10.1098/rstb.2020.0444},
-	url = {https://doi.org/10.1098%2Frstb.2020.0444},
-	year = 2022,
-	month = {jan},
-	publisher = {The Royal Society},
-	volume = {377},
-	number = {1845},
-	author = {Madeleine F. Dwortz and James P. Curley and Kay M. Tye and Nancy Padilla-Coreano},
-	title = {Neural systems that facilitate the representation of social rank},
-	journal = {Philosophical Transactions of the Royal Society B: Biological Sciences}
-}
-@article{9Strauss_2022,
-	doi = {10.1098/rstb.2020.0432},
-	url = {https://doi.org/10.1098%2Frstb.2020.0432},
-	year = 2022,
-	month = {jan},
-	publisher = {The Royal Society},
-	volume = {377},
-	number = {1845},
-	author = {Eli D. Strauss and James P. Curley and Daizaburo Shizuka and Elizabeth A. Hobson},
-	title = {The centennial of the pecking order: current state and future prospects for the study of dominance hierarchies},
-	journal = {Philosophical Transactions of the Royal Society B: Biological Sciences}
-}
-@article{10Chase_2022,
-	doi = {10.1016/j.socnet.2021.09.002},
-	url = {https://doi.org/10.1016%2Fj.socnet.2021.09.002},
-	year = 2022,
-	month = {jan},
-	publisher = {Elsevier {BV}},
-	volume = {68},
-	pages = {356--373},
-	author = {Ivan D. Chase and Darius Coelho and Won Lee and Klaus Mueller and James P. Curley},
-	title = {Networks never rest: An investigation of network evolution in three species of animals},
-	journal = {Social Networks}
-}
-@article{11Lee_2021,
-	doi = {10.1101/2021.09.04.458987},
-	url = {https://doi.org/10.1101%2F2021.09.04.458987},
-	year = 2022,
-	month = {sep},
-	publisher = {Cold Spring Harbor Laboratory},
-	author = {Won Lee and Tyler M. Milewski and Madeleine F. Dwortz and Rebecca L. Young and Andrew D. Gaudet and Laura K. Fonken and Frances A. Champagne and James P. Curley},
-	title = {Distinct inflammatory and transcriptomic profiles in dominant versus subordinate males in mouse social hierarchies},
-	journal = {Brain Behavior and Immunity}
-}
-@article{12Lee_2021,
-	doi = {10.1038/s41598-021-82255-8},
-	url = {https://doi.org/10.1038%2Fs41598-021-82255-8},
-	year = 2021,
 	month = {feb},
+	publisher = {Public Library of Science ({PLoS})},
+	volume = {18},
+	number = {2},
+	pages = {e1009575},
+	author = {Jonathan Samir Matthis and Karl S. Muller and Kathryn L. Bonnen and Mary M. Hayhoe},
+	editor = {Daniel S Marigold},
+	title = {Retinal optic flow during natural locomotion},
+	journal = {{PLOS} Computational Biology}
+}
+@article{5Rubin_2022,
+	doi = {10.3758/s13414-021-02430-x},
+	url = {https://doi.org/10.3758%2Fs13414-021-02430-x},
+	year = 2022,
+	month = {jan},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {84},
+	number = {2},
+	pages = {396--407},
+	author = {Mikael Rubin and Sihang Guo and Karl Muller and Ruohan Zhang and Michael J. Telch and Mary M. Hayhoe},
+	title = {Selective visual attention during public speaking in an immersive context},
+	journal = {Attention, Perception, {\&} Psychophysics}
+}
+@article{6Bonnen_2021,
+	doi = {10.1038/s41598-021-99846-0},
+	url = {https://doi.org/10.1038%2Fs41598-021-99846-0},
+	year = 2021,
+	month = {oct},
 	publisher = {Springer Science and Business Media {LLC}},
 	volume = {11},
 	number = {1},
-	author = {Won Lee and Hollie N. Dowd and Cyrus Nikain and Madeleine F. Dwortz and Eilene D. Yang and James P. Curley},
-	title = {Effect of relative social rank within a social hierarchy on neural activation in response to familiar or unfamiliar social signals},
+	author = {Kathryn Bonnen and Jonathan S. Matthis and Agostino Gibaldi and Martin S. Banks and Dennis M. Levi and Mary Hayhoe},
+	title = {Binocular vision and the control of foot placement during walking in natural terrain},
 	journal = {Scientific Reports}
 }
-@article{13Turetsky_2020,
-	doi = {10.1126/sciadv.aba9221},
-	url = {https://doi.org/10.1126%2Fsciadv.aba9221},
+@article{7Rubin_2020,
+	doi = {10.1016/j.brat.2020.103706},
+	url = {https://doi.org/10.1016%2Fj.brat.2020.103706},
 	year = 2020,
 	month = {nov},
-	publisher = {American Association for the Advancement of Science ({AAAS})},
-	volume = {6},
-	number = {45},
-	author = {Kate M. Turetsky and Valerie Purdie-Greenaway and Jonathan E. Cook and James P. Curley and Geoffrey L. Cohen},
-	title = {A psychological intervention strengthens students' peer social networks and promotes persistence in {STEM}},
-	journal = {Science Advances}
-}
-@article{14Beery_2020,
-	doi = {10.1016/j.neubiorev.2020.03.033},
-	url = {https://doi.org/10.1016%2Fj.neubiorev.2020.03.033},
-	year = 2020,
-	month = {jun},
 	publisher = {Elsevier {BV}},
-	volume = {113},
-	pages = {354--372},
-	author = {Annaliese K. Beery and Melissa M. Holmes and Won Lee and James P. Curley},
-	title = {Stress in groups: Lessons from non-traditional rodent species and housing models},
-	journal = {Neuroscience {\&} Biobehavioral Reviews}
+	volume = {134},
+	pages = {103706},
+	author = {Mikael Rubin and Sean Minns and Karl Muller and Matthew H. Tong and Mary M. Hayhoe and Michael J. Telch},
+	title = {Avoidance of social threat: Evidence from eye movements during a public speaking challenge using 360{\textdegree}- video},
+	journal = {Behaviour Research and Therapy}
+}
+@inproceedings{Zhang_2020,
+	doi = {10.24963/ijcai.2020/689},
+	url = {https://doi.org/10.24963%2Fijcai.2020%2F689},
+	year = 2020,
+	month = {jul},
+	publisher = {International Joint Conferences on Artificial Intelligence Organization},
+	author = {Ruohan Zhang and Akanksha Saran and Bo Liu and Yifeng Zhu and Sihang Guo and Scott Niekum and Dana Ballard and Mary Hayhoe},
+	title = {Human Gaze Assisted Artificial Intelligence: A Review},
+	booktitle = {Proceedings of the Twenty-Ninth International Joint Conference on Artificial Intelligence},
+	journal = {IJCAI : proceedings of the conference}
+}
+@article{9Zhang_2020,
+	doi = {10.1609/aaai.v34i04.6161},
+	url = {https://doi.org/10.1609%2Faaai.v34i04.6161},
+	year = 2020,
+	month = {apr},
+	publisher = {Association for the Advancement of Artificial Intelligence ({AAAI})},
+	volume = {34},
+	number = {04},
+	pages = {6811--6820},
+	author = {Ruohan Zhang and Calen Walshe and Zhuode Liu and Lin Guan and Karl Muller and Jake Whritner and Luxin Zhang and Mary Hayhoe and Dana Ballard},
+	title = {Atari-{HEAD}: Atari Human Eye-Tracking and Demonstration Dataset},
+	journal = {Proceedings of the {AAAI} Conference on Artificial Intelligence}
+}
+@article{10Hayhoe_2020,
+	doi = {10.1167/jov.20.2.8},
+	url = {https://doi.org/10.1167%2Fjov.20.2.8},
+	year = 2020,
+	month = {feb},
+	publisher = {Association for Research in Vision and Ophthalmology ({ARVO})},
+	volume = {20},
+	number = {2},
+	pages = {8},
+	author = {Mary Hayhoe and Katja Fiehler and Miriam Spering and Eli Brenner and Karl R. Gegenfurtner},
+	title = {Introduction to special issue on {\textquotedblleft}Prediction in Perception and Action{\textquotedblright}},
+	journal = {Journal of Vision}
 }
